--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
   }
 </style>
 
-<script src='https://aframe.io/releases/1.0.4/aframe.min.js'></script>
+<!--<script src='https://aframe.io/releases/1.0.4/aframe.min.js'></script>-->
 <!-- rawgithack development URL -->
-<script src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js'></script>
+<!--<script src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js'></script>-->
+
+<script src='/vendor/aframe.1.0.4.min.js'></script>
+<script src='/vendor/aframe-ar-nft.2021-02-09.js'></script>
 
 </head>
 
