--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <!-- rawgithack development URL -->
 <!--<script src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js'></script>-->
 
-<script src='/vendor/aframe.1.0.4.min.js'></script>
-<script src='/vendor/aframe-ar-nft.2021-02-09.js'></script>
+<script src='/webar-test/vendor/aframe.1.0.4.min.js'></script>
+<script src='/webar-test/vendor/aframe-ar-nft.2021-02-09.js'></script>
 
 </head>
 
@@ -44,10 +44,10 @@
 
         <!-- use rawgithack to retrieve the correct url for nft marker (see 'pinball' below) -->
         <a-nft
-            type='nft' url='/trex-image/trex'
+            type='nft' url='/webar-test/trex-image/trex'
             smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'>
             <a-entity
-                gltf-model='/chest/scene.gltf'
+                gltf-model='/webar-test/chest/scene.gltf'
                 scale="5 5 5"
                 position="50 150 -100"
                 >
