--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
         renderer="logarithmicDepthBuffer: true;"
         embedded arjs='trackingMethod: best; sourceType: webcam; debugUIEnabled: false;'>
 
-        <!-- use rawgithack to retrieve the correct url for nft marker (see 'pinball' below) -->
+
+        <!-- type='nft' url='/webar-test/trex-image/trex' -->
         <a-nft
-            type='nft' url='/webar-test/trex-image/trex'
+            type='nft' url='/webar-test/olebre-image/olebre'
             smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'>
             <a-entity
                 gltf-model='/webar-test/chest/scene.gltf'
