--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <!--<script src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js'></script>-->
 
 <script src='/webar-test/vendor/aframe.1.0.4.min.js'></script>
-<script src='/webar-test/vendor/aframe-ar-nft.2021-02-09.js'></script>
+<script src='/webar-test/vendor/ar.js'></script>
 
 </head>
 
