--- a/index.html
+++ b/index.html
@@ -43,7 +43,18 @@
         embedded arjs='trackingMethod: best; sourceType: webcam; debugUIEnabled: false;'>
 
 
-        <!-- type='nft' url='/webar-test/trex-image/trex' -->
+        <a-nft
+            type='nft' url='/webar-test/trex-image/trex'
+            smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'>
+            <a-entity
+                gltf-model='/webar-test/chest/scene.gltf'
+                scale="0.5 0.5 0.5"
+                position="50 150 -100"
+                >
+            </a-entity>
+        </a-nft>
+
+
         <a-nft
             type='nft' url='/webar-test/olebre-image/olebre'
             smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'>
@@ -54,6 +65,8 @@
                 >
             </a-entity>
         </a-nft>
+
 		<a-entity camera></a-entity>
     </a-scene>
 </body>
+
