--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <a-entity
                 gltf-model='/webar-test/chest/scene.gltf'
                 scale="0.5 0.5 0.5"
-                position="50 150 -100"
+                position="0 0 0"
                 >
             </a-entity>
         </a-nft>
@@ -59,9 +59,9 @@
             type='nft' url='/webar-test/olebre-image/olebre'
             smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'>
             <a-entity
-                gltf-model='/webar-test/chest/scene.gltf'
+                gltf-model='/webar-test/cube_from_blender.glb'
                 scale="0.5 0.5 0.5"
-                position="50 150 -100"
+                position="0 0 0"
                 >
             </a-entity>
         </a-nft>
