cube as .gltf not .glb

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             type='nft' url='/webar-test/olebre-image/olebre'
             smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'>
             <a-entity
-                gltf-model='/webar-test/cube_from_blender.glb'
+                gltf-model='/webar-test/cube_from_blender/cube_from_blender.gltf'
                 scale="0.5 0.5 0.5"
                 position="0 0 0"
                 >
