Fix cube .gltf path

--- a/index-simple.html
+++ b/index-simple.html
@@ -20,7 +20,7 @@
             smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'>
 
             <a-entity
-                gltf-model='/webar-test/new_cube.gltf'
+                gltf-model='/webar-test/cube_from_blender/cube_from_blender.gltf'
                 scale="1.5 1.5 1.5"
                 position="0 0 0"
                 >
